<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/FullScreen"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="212dp"
            android:layout_height="130dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launchercarro">

        </ImageView>

        <EditText
            style="@style/mCustomEditText"
            android:id="@+id/editDistance"
            android:hint="@string/distancia" />

        <TextView
            style="@style/mCustomTextView"
            android:text="@string/total_de_quilometros" />

        <EditText

            android:id="@+id/editPrice"
            style="@style/mCustomEditText"
            android:hint="@string/preco" />

        <TextView
            style="@style/mCustomTextView"
            android:text="@string/valor_em_litro" />

        <EditText
            android:id="@+id/editAutonomy"
            style="@style/mCustomEditText"
            android:hint="@string/autonomia" />

        <TextView
            style="@style/mCustomTextView"
            android:text="@string/km_por_litro" />

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_marginTop="35dp"
            android:text="Seus Gastos total será de :"
            android:textColor="@color/colorAccent"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:id="@+id/textResult"
            android:textColor="@color/colorText"
            android:textSize="35sp"
            android:text="R$ 0,00" />

        <Button

            android:background="@drawable/round_btn"
            android:textColor="@color/TextButtonWhite"
            android:padding="20dp"
            android:textSize="20sp"
            android:id="@+id/buttonCalculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calcular"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp" />

    </LinearLayout>


</ScrollView>